--- a/equipos.html
+++ b/equipos.html
@@ -40,67 +40,67 @@
 				<div class="content">
 					<section id="section-1">
 						<div class="mediabox">
-							<img src="/img/a01.png" alt="img01" />
+							<img src="img/A01.png" alt="img01" />
 							<h3>Parque</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/a02.png" alt="img02" />
+							<img src="img/A02.png" alt="img02" />
 							<h3>Las Americas</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/a03.png" alt="img03" />
+							<img src="img/A03.png" alt="img03" />
 							<h3>Olimpico</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/A04.png" alt="img01" />
+							<img src="img/A04.png" alt="img01" />
 							<h3>Juventus</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/a05.png" alt="img02" />
+							<img src="img/A05.png" alt="img02" />
 							<h3>Central</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/A06.png" alt="img03" />
+							<img src="img/A06.png" alt="img03" />
 							<h3>18 de Julio</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/A07.png" alt="img03" />
+							<img src="img/A07.png" alt="img03" />
 							<h3>Peñarol</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/A08.png" alt="img03" />
+							<img src="img/A08.png" alt="img03" />
 							<h3>Nacional</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/A09.png" alt="img03" />
+							<img src="img/A09.png" alt="img03" />
 							<h3>Social</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/A10.png" alt="img03" />
+							<img src="img/A10.png" alt="img03" />
 							<h3>Tauro</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/A12.png" alt="img03" />
+							<img src="img/A12.png" alt="img03" />
 							<h3>La Colmena</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/A13.png" alt="img03" />
+							<img src="img/A13.png" alt="img03" />
 							<h3>Plaza Colon</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/A14.png" alt="img03" />
+							<img src="img/A14.png" alt="img03" />
 							<h3>Deportivo Senior</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
@@ -108,42 +108,42 @@
 					<!-- DIVISIONAL B -->
 					<section id="section-2">
 						<div class="mediabox">
-							<img src="/img/B01.png" alt="img04" />
+							<img src="img/B01.png" alt="img04" />
 							<h3>Real</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/B02.png" alt="img05" />
+							<img src="img/B02.png" alt="img05" />
 							<h3>Municipales</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/B03.png" alt="img06" />
+							<img src="img/B03.png" alt="img06" />
 							<h3>Solis</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/B04.png" alt="img06" />
+							<img src="img/B04.png" alt="img06" />
 							<h3>LIVERPOOL</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/B05.png" alt="img06" />
+							<img src="img/B05.png" alt="img06" />
 							<h3>Lomas</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/b06.png" alt="img06" />
+							<img src="img/B06.png" alt="img06" />
 							<h3>La Celeste</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/B07.png" alt="img06" />
+							<img src="img/B07.png" alt="img06" />
 							<h3>Huracan</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/B08.png" alt="img06" />
+							<img src="img/B08.png" alt="img06" />
 							<h3>Rojo United</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
@@ -157,32 +157,32 @@
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/c02.png" alt="img06" />
+							<img src="/img/C02.png" alt="img06" />
 							<h3>San Francisco</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/c03.png" alt="img01" />
+							<img src="img/C03.png" alt="img01" />
 							<h3>La 14</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/c04.png" alt="img01" />
+							<img src="img/C04.png" alt="img01" />
 							<h3>Barcelona</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/c05.png" alt="img01" />
+							<img src="img/C05.png" alt="img01" />
 							<h3>Casa Blanca</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/c06.png" alt="img01" />
+							<img src="img/C06.png" alt="img01" />
 							<h3>Herreros</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
 						<div class="mediabox">
-							<img src="/img/c07.png" alt="img01" />
+							<img src="img/C07.png" alt="img01" />
 							<h3>Torino</h3>
 							<a href=""><p>Datos del Club ➡️</p></a>
 						</div>
