--- a/fixture.html
+++ b/fixture.html
@@ -42,27 +42,27 @@
 							<p>Cancha Carmisol</p>
 						</div>
 						<div class="mediabox">
-							<a href="img/f02.png" target="_blank"><img src="img/f02.png" alt="img02" /></a>
+							<a href="img/F02.png" target="_blank"><img src="img/f02.png" alt="img02" /></a>
 							<h3>FECHA 17</h3>
 							<p>Cancha Municipales</p>
 						</div>
 						<div class="mediabox">
-							<img src="img/f03.png" alt="img03" />
+							<img src="img/F03.png" alt="img03" />
 							<h3>FECHA 17</h3>
 							<p>Cancha IASA</p>
 						</div>
 						<div class="mediabox">
-							<img src="img/f04.png" alt="img01" />
+							<img src="img/F04.png" alt="img01" />
 							<h3>FECHA 17</h3>
 							<p>Cancha La Liga 1</p>
 						</div>
 						<div class="mediabox">
-							<img src="img/f05.png" alt="img02" />
+							<img src="img/F05.png" alt="img02" />
 							<h3>FECHA 17</h3>
 							<p>Cancha LA liga 2</p>
 						</div>
 						<div class="mediabox">
-							<img src="img/f06.png" alt="img03" />
+							<img src="img/F06.png" alt="img03" />
 							<h3>FECHA 17</h3>
 							<p>Cancha Casa Blanca</p>
 						</div>
