--- a/resultados.html
+++ b/resultados.html
@@ -38,13 +38,13 @@
 				<div class="content">
 					<section id="section-1">
 						<div class="mediabox">
-							<img src="img/r01.png" alt="img01" />
+							<img src="img/R01.png" alt="img01" />
 							<h3>DIVISIONAL A</h3>
 							<p>FECHA 17</p>
 							
 						</div>
 						<div class="mediabox">
-							<img src="img/r02.png" alt="img02" />
+							<img src="img/R02.png" alt="img02" />
 							<h3>DIVISIONAL B</h3>
 							<p>FECHA 17</p>
 						</div>
