--- a/tabla.html
+++ b/tabla.html
@@ -37,12 +37,12 @@
 				<div class="content">
 					<section id="section-1">
 						<div class="mediabox">
-							<img src="img/t01.png" alt="img01" />
+							<img src="img/T01.png" alt="img01" />
 							<h3>DIVISIONAL A</h3>
 							<p>FECHA 17</p>
 						</div>
 						<div class="mediabox">
-							<img src="img/t02.png" alt="img02" />
+							<img src="img/T02.png" alt="img02" />
 							<h3>DIVISIONAL B</h3>
 							<p>FECHA 17</p>
 						</div>
