--- a/fixture.html
+++ b/fixture.html
@@ -17,13 +17,13 @@
 				<span>Liga Recreativa de Futbol Senior </span>
 				<h1>🧾</h1>
 				<nav>
-					<a href="index.html"><span>Inicio</span>⚽Inicio</a>
-					<a href="equipos.html"><span>Equipos</span>👕 Equipos</a>
-					<a href="fixture.html" ><span>Fixture</span>🧾 Fixture</a>
-					<a href="tabla.html" ><span>Tabla</span>📈 Tabla</a>
-					<a href="resultados.html" ><span>Resultados</span>🆚 Resultados</a>
-					<a href="Canchas.html" ><span>Canchas</span>🥅 Canchas</a>
-					<a href="contacto.html"><span>Contacto</span>📧 Contacto</a>
+					<a href="/LRFSP/index.html"><span>Inicio</span>⚽Inicio</a>
+					<a href="/LRFSP/equipos.html"><span>Equipos</span>👕 Equipos</a>
+					<a href="/LRFSP/fixture.html" ><span>Fixture</span>🧾 Fixture</a>
+					<a href="/LRFSP/tabla.html" ><span>Tabla</span>📈 Tabla</a>
+					<a href="/LRFSP/resultados.html" ><span>Resultados</span>🆚 Resultados</a>
+					<a href="/LRFSP/Canchas.html" ><span>Canchas</span>🥅 Canchas</a>
+					<a href="/LRFSP/contacto.html"><span>Contacto</span>📧 Contacto</a>
 				</nav>
 			</header>	
 			<div id="tabs" class="tabs">
@@ -42,7 +42,7 @@
 							<p>Cancha Carmisol</p>
 						</div>
 						<div class="mediabox">
-							<a href="img/F02.png" target="_blank"><img src="img/f02.png" alt="img02" /></a>
+							<a href="img/F02.png" target="_blank"><img src="img/F02.png" alt="img02" /></a>
 							<h3>FECHA 17</h3>
 							<p>Cancha Municipales</p>
 						</div>
