--- a/tabla.html
+++ b/tabla.html
@@ -17,13 +17,13 @@
 				<span>Liga Recreativa de Futbol Senior </span>
 				<h1>📈</h1>
 				<nav>
-					<a href="index.html"><span>Inicio</span>⚽Inicio</a>
-					<a href="equipos.html"><span>Equipos</span>👕 Equipos</a>
-					<a href="fixture.html" ><span>Fixture</span>🧾 Fixture</a>
-					<a href="tabla.html" ><span>Tabla</span>📈 Tabla</a>
-					<a href="resultados.html" ><span>Resultados</span>🆚 Resultados</a>
-					<a href="Canchas.html" ><span>Canchas</span>🥅 Canchas</a>
-					<a href="contacto.html"><span>Contacto</span>📧 Contacto</a>
+					<a href="/LRFSP/index.html"><span>Inicio</span>⚽Inicio</a>
+					<a href="/LRFSP/equipos.html"><span>Equipos</span>👕 Equipos</a>
+					<a href="/LRFSP/fixture.html" ><span>Fixture</span>🧾 Fixture</a>
+					<a href="/LRFSP/tabla.html" ><span>Tabla</span>📈 Tabla</a>
+					<a href="/LRFSP/resultados.html" ><span>Resultados</span>🆚 Resultados</a>
+					<a href="/LRFSP/Canchas.html" ><span>Canchas</span>🥅 Canchas</a>
+					<a href="/LRFSP/contacto.html"><span>Contacto</span>📧 Contacto</a>
 				</nav>
 			</header>	
 			<div id="tabs" class="tabs">
